modification de mon application pour les tests